--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">MeetEase</string>
     <string name="account_login"><u>LOGIN</u></string>
     <string name="don_t_have_an_account_signup"><u>SIGNUP</u></string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
