--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="don_t_have_an_account_signup"><u>SIGNUP</u></string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="client_id">159023561809-qsvqo1au58o8ai69o7q5qr2cfh4tui7k.apps.googleusercontent.com</string>
 </resources>
