--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="client_id">159023561809-qsvqo1au58o8ai69o7q5qr2cfh4tui7k.apps.googleusercontent.com</string>
-    <string name="default_notification_channel_id">123</string>
+    <string name="default_notification_channel_id">meeting_notification</string>
     <string name="msg_token_fmt">123</string>
 </resources>
